--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "frontend-project-lvl1",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx -n --experimental-vm-modules jest"
   },
   "repository": {
     "type": "git",
