--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,4 @@ parserOptions:
 rules:
   no-console: 0
   import/extensions: 0 # FIXME: remove when rule will be adjusted for new nodejs version
+  eol-last: 0
