--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "eslint": "^7.7.0",
-    "eslint-plugin-jest": "^23.20.0"
+    "eslint-plugin-jest": "^23.20.0",
+    "jest": "^26.4.2"
   }
 }
