--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -19,3 +19,4 @@ rules:
   no-console: 0
   import/extensions: 0 # FIXME: remove when rule will be adjusted for new nodejs version
   eol-last: 0
+  import/no-unresolved: off
